syntax = "proto3";

package client_content;

message Content{
    string _id=1;
    string title=2;
    string story=3;
    int64 likes=4;
    string publishedDate=5;
}

message TopContentRequest{
    
}

message TopContentResponse{
    repeated Content topContents=1;
}

message LikeRequest{
    string contentId=1;
}

message LikeResponse{
    Content content=1;
}

service CLientToContent {
    rpc TopContents (TopContentRequest) returns (stream TopContentResponse) {};
    rpc LikeContent (LikeRequest) returns (LikeResponse);
    rpc UnLikeContent (LikeRequest) returns (LikeResponse);
} 