// Original file: proto/client_content.proto

import type { Content as _client_content_Content, Content__Output as _client_content_Content__Output } from '../client_content/Content';

export interface TopContentResponse {
  'topContents'?: (_client_content_Content)[];
}

export interface TopContentResponse__Output {
  'topContents'?: (_client_content_Content__Output)[];
}
